--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Chào mừng đến với Thôn Đóm | Thôn chứa toàn là trai xinh gái đẹp | Bà Táo làm già làng" />
     <meta property="og:title" content="Thôn Đóm | Thôn của những fan hâm mộ JACK" />
     <meta property="og:description" content="Chào mừng đến với Thôn Đóm | Thôn chứa toàn là trai xinh gái đẹp | Bà Táo làm già làng" />
-    <meta property="og:image" content="https://thondom.github.io/images/taotaotao.jpg" />
+    <meta property="og:image" content="https://taoyeucam.github.io/thondom.github.io/images/taotaotao.jpg" />
     <meta content="INDEX,FOLLOW" name="robots" />
     <meta name="viewport" content="width=device-width" />
     <meta name="copyright" content="Táo Táo Táo (Bà Táo)" />
